<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP90_Camera_Fb" Id="{d047251b-7195-4180-9dc0-d032ba181f76}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP90_Camera_Fb
VAR
	OP90_LH_Camera 			        : FB_Cognex_ProfiNET_1;

	
	OP90_LH_Acquisition_Status AT %I*    :Acquisition_Status;
	OP90_LH_Inspection_Status  AT %I*    :Inspection_Status;	
	OP90_LH_Acquisition_ID     AT %I*    :UINT;
	OP90_LH_Inspection_ID   	 AT %I*  :UINT;
	OP90_LH_Error_code      	 AT %I*  :UINT;
	OP90_LH_Current_Job_ID  	 AT %I*  :UINT;
	OP90_LH_Result_code     	 AT %I*  :UINT;
	OP90_LH_Cam_Result      	 AT %I*  :ARRAY[0..63] OF BYTE;	
	OP90_LH_Acquisition_Control AT %Q*  : Acquisition_Control;
	OP90_LH_Inspection_Control  AT %Q*  : Inspection_Control;
	OP90_LH_Command_word		AT %Q*  : UINT;
	OP90_LH_Union                       : UNION_64Byte;

	OP90_RH_Camera 			          : FB_Cognex_ProfiNET_1;

	
	OP90_RH_Acquisition_Status AT %I*    :Acquisition_Status;
	OP90_RH_Inspection_Status  AT %I*    :Inspection_Status;	
	OP90_RH_Acquisition_ID     AT %I*    :UINT;
	OP90_RH_Inspection_ID   	 AT %I*  :UINT;
	OP90_RH_Error_code      	 AT %I*  :UINT;
	OP90_RH_Current_Job_ID  	 AT %I*  :UINT;
	OP90_RH_Result_code     	 AT %I*  :UINT;
	OP90_RH_Cam_Result      	 AT %I*  :ARRAY[0..63] OF BYTE;	
	OP90_RH_Acquisition_Control AT %Q*  : Acquisition_Control;
	OP90_RH_Inspection_Control  AT %Q*  : Inspection_Control;
	OP90_RH_Command_word		AT %Q*  : UINT;
	OP90_RH_Union                       : UNION_64Byte;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[OP90_LH_Camera (
	tTimeout:= , 
	sJob_Name:= , 
	camera_ready=> OP90_LH_Camera_Ready,
	Camera_online=> OP90_LH_Camera_Online,
	stCognex_record_status:=OP90_LH_Acquisition_Status, 
	Acquisition_ID:=OP90_LH_Acquisition_ID , 
	stCognex_Inspection_status:=OP90_LH_Inspection_Status, 
	Error_Code:=OP90_LH_Error_code , 
	wcommand_control_in:= OP90_LH_Current_Job_ID, 
	aResults_64_Bytes:= OP90_LH_Cam_Result, 
	number_of_inspections:=OP90_LH_Inspection_ID , 
	iresult_code:= OP90_LH_Result_code, 
	bTarget_job_ID:=OP90_LH_Target_Job_ID , 
	Error_Status_message=> OP90_LH_Error_status, 
	bError=> OP90_LH_Camera_Error, 
	stCognex_record_control=>OP90_LH_Acquisition_Control , 
	stCognex_inspection_control=>OP90_LH_Inspection_Control , 
	wCommandControl_out=>OP90_LH_Command_word , 
	aUser_data_64_Byte=> OP90_LH_Union.aArrayOfByte, 
	bJob_loading_completed=>OP90_LH_Job_Change_Complete , 
	bJob_load_failed=>OP90_LH_Job_Change_Error , 
	bInspection_Result_IO=>  , 
	bInspection_Result_NIO=> , 
	bTXTSM_Error_Job_Change=> OP90_LH_Job_Change_Error, 
	bPictureTakenComplete=> OP90_LH_Picture_Taken, 
	Loaded_Job_ID=>OP90_LH_Loaded_Job_ID	 , 
	bClear_Error:= HMI_Reset, 
	bJob_change_start:= OP90_LH_Camera_Job_Change_start, 
	TXTSM_camera_not_online=>OP90_LH_Camera_Error	 , 
	bTrigger_start:= OP90_LH_Camera_Trigger );
	
	OP90_RH_Camera (
	tTimeout:= , 
	sJob_Name:= , 
	camera_ready=> OP90_RH_Camera_Ready,
	Camera_online=> OP90_RH_Camera_Online,
	stCognex_record_status:=OP90_RH_Acquisition_Status, 
	Acquisition_ID:=OP90_RH_Acquisition_ID , 
	stCognex_Inspection_status:=OP90_RH_Inspection_Status, 
	Error_Code:=OP90_RH_Error_code , 
	wcommand_control_in:= OP90_RH_Current_Job_ID, 
	aResults_64_Bytes:= OP90_RH_Cam_Result, 
	number_of_inspections:=OP90_RH_Inspection_ID , 
	iresult_code:= OP90_RH_Result_code, 
	bTarget_job_ID:=OP90_RH_Target_Job_ID , 
	Error_Status_message=> OP90_RH_Error_status, 
	bError=> OP90_RH_Camera_Error, 
	stCognex_record_control=>OP90_RH_Acquisition_Control , 
	stCognex_inspection_control=>OP90_RH_Inspection_Control , 
	wCommandControl_out=>OP90_RH_Command_word , 
	aUser_data_64_Byte=> OP90_RH_Union.aArrayOfByte, 
	bJob_loading_completed=>OP90_RH_Job_Change_Complete , 
	bJob_load_failed=>OP90_RH_Job_Change_Error , 
	bInspection_Result_IO=>  , 
	bInspection_Result_NIO=> , 
	bTXTSM_Error_Job_Change=> OP90_RH_Job_Change_Error, 
	bPictureTakenComplete=> OP90_RH_Picture_Taken, 
	Loaded_Job_ID=>OP90_RH_Loaded_Job_ID	 , 
	bClear_Error:= HMI_Reset, 
	bJob_change_start:= OP90_RH_Camera_Job_Change_start, 
	TXTSM_camera_not_online=>OP90_RH_Camera_Error	 , 
	bTrigger_start:= OP90_RH_Camera_Trigger );	]]></ST>
    </Implementation>
    <LineIds Name="OP90_Camera_Fb">
      <LineId Id="57" Count="61" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>